# Kokkidio

./: DualViewMap_8hpp_source.html  EigenRange_8hpp_source.html  EigenRange__func_8hpp_source.html  IndexRange_8hpp_source.html  Kokkidio_8hpp_source.html  README.adoc  RangePolicyHelper_8hpp_source.html  TargetEnum_8hpp_source.html  TargetSpaces_8hpp_source.html  ViewMap_8hpp_source.html  annotated.html  classKokkidio_1_1DualViewMap__coll__graph.md5  classKokkidio_1_1EigenRange__inherit__graph.map  classKokkidio_1_1EigenRange__inherit__graph.md5  classKokkidio_1_1IndexRange-members.html  classKokkidio_1_1IndexRange__coll__graph.map  classKokkidio_1_1IndexRange__coll__graph.md5  classKokkidio_1_1ParallelRange__coll__graph.map  classKokkidio_1_1ParallelRange__coll__graph.md5  classKokkidio_1_1ViewMap.html  classKokkidio_1_1chunk_1_1HostBuffer.html  classKokkidio_1_1chunk_1_1HostBuffer__coll__graph.map  classKokkidio_1_1chunk_1_1HostBuffer__coll__graph.md5  classKokkidio_1_1observer__ptr-members.html  dir_5f67391a71a51cbdbdd663310f72a06b.html  dir_5f67391a71a51cbdbdd663310f72a06b_dep.map  dir_5f67391a71a51cbdbdd663310f72a06b_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_13.md5  inherit_graph_14.md5  inherit_graph_16.md5  inherit_graph_19.map  (+55 more)
cmake/: KokkidioVars.in.cmake  (+2 more)
src/tests/raxpy/: CMakeLists.txt  main.cpp  raxpy.hpp  raxpy_native_cpu.cpp  raxpy_native_cuda_hip.cpp  raxpy_unif.in  raxpy_unif_cpu.cpp  raxpy_unif_gpu.cpp
src/tests/rpow/: CMakeLists.txt  main.cpp  rpow.hpp  rpow_native_cpu.cpp  rpow_native_cuda_hip.cpp  rpow_unif.in  rpow_unif_cpu.cpp  rpow_unif_gpu.cpp
(+170 files in other folders)
